# btx

./: .dockerignore  .gitattributes  .gitignore  ACTIVATION.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INTEGRATION_REPORT.md  MERGE_AUDIT.md  README.md  SECURITY.md  analyze_payouts.py  btx-add-peers.sh  btx-apply-mediangap.sh  btx-apply-solver-cfg.sh  btx-autotune.sh  btx-ban-stale-peers.sh  btx-bench-poolslots.sh  btx-bench-v3knobs.sh  btx-broadcast-100.sh  btx-broadcast-test.sh  btx-check-backend.sh  btx-check-chainguard.sh  btx-check-coinbase.sh  btx-check-mined.sh  btx-check-peers.sh  btx-check-pool.sh  btx-check-runtime.sh  btx-check-solo-mode.sh  btx-check-solver-env.sh  btx-check-status.sh  btx-check-tip-origin.sh  btx-clean-restart.sh  btx-confirm-solver.sh  btx-conn-monitor.sh  btx-control.pyw  btx-cpu-affinity.ps1  btx-cpu-feed.sh  btx-deploy-test-solver.sh  btx-digest-rate.sh  (+114 more)
src/: CMakeLists.txt  addresstype.cpp  addresstype.h  bip324.cpp  bip324.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  btx-genesis.cpp  btx-matmul-backend-info.cpp  btx-matmul-cost-bench.cpp  btx-matmul-metal-bench.cpp  btx-matmul-solve-bench.cpp  chain.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  coins.cpp  coins.h  core_read.cpp  core_write.cpp  dandelion.cpp  dandelion.h  dbwrapper.cpp  dbwrapper.h  deploymentstatus.cpp  deploymentstatus.h  external_signer.cpp  external_signer.h  headerssync.cpp  headerssync.h  httpserver.cpp  httpserver.h  (+39 more)
src/ascend/: matmul_v4_lt_accel.cpp  matmul_v4_lt_accel.h  matmul_v4_lt_accel_stub.cpp  matmul_v4_rc_accel.cpp  matmul_v4_rc_accel.h
src/bench/: CMakeLists.txt  bench_bitcoin.cpp  block_assemble.cpp  bridge_batch_bench.cpp  checkblock.cpp  matmul_batch_tuning_bench.cpp  matmul_freivalds_bench.cpp  matmul_genesis_calibration.cpp  matmul_metal_bench.cpp  matmul_prehash_bench.cpp  matmul_reuse_bench.cpp  matmul_solve_bench.cpp  matmul_v4_bmx4_combine_bench.cpp  matmul_v4_combine_tournament_bench.cpp  matmul_v4_lt_stage_bench.cpp  matmul_v4_stage_bench.cpp  ml_kem_bench.cpp  pq_verify.cpp  readwriteblock.cpp  rpc_blockchain.cpp  shielded_matrict_bench.cpp  shielded_merkle_bench.cpp  shielded_note_bench.cpp  shielded_ring_signature_bench.cpp  shielded_turnstile_bench.cpp  wallet_loading.cpp
src/common/: args.cpp  init.cpp  messages.cpp  run_command.cpp  system.cpp  system.h  types.h
src/consensus/: amount.h  consensus.h  params.h  tx_check.cpp  tx_verify.cpp  validation.h
src/crc32c/: CMakeLists.txt
src/crypto/: CMakeLists.txt  ct_utils.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  kawpow.cpp  kawpow.h  ml_kem.cpp  ml_kem.h  sha256.cpp  sha256.h  sha256_xof_arm_shani.cpp  sha256_xof_avx2.cpp  sha256_xof_shani.cpp  timing_safe.h
src/cuda/: cuda_context.cpp  cuda_context.h  matmul_accel.cu  matmul_accel.h  matmul_accel_stub.cpp  matmul_v4_accel.cu  matmul_v4_accel.h  matmul_v4_accel_stub.cpp  matmul_v4_bmx4_accel.cu  matmul_v4_bmx4_accel.h  matmul_v4_bmx4_accel_stub.cpp  matmul_v4_bmx4_context.cpp  matmul_v4_bmx4_context.h  matmul_v4_bmx4_cutlass_mxfp4.cu  matmul_v4_bmx4_cutlass_mxfp4.h  matmul_v4_bmx4_cutlass_mxfp4_link.cpp  matmul_v4_bmx4_fp8_five_limb.cpp  matmul_v4_bmx4_fp8_five_limb.h  matmul_v4_lt_accel.cu  matmul_v4_lt_accel.h  matmul_v4_lt_accel_stub.cpp  matmul_v4_lt_cutlass_mxfp4.cu  matmul_v4_lt_cutlass_mxfp4.h  matmul_v4_lt_cutlass_mxfp4_link.cpp  matmul_v4_lt_device_mx.h  matmul_v4_lt_mx_native.cu  matmul_v4_lt_mx_native.h  matmul_v4_lt_tensor_gemm.cu  matmul_v4_lt_tensor_gemm.h  matmul_v4_lt_tensor_gemm_stub.cpp  matmul_v4_rc_episode_context.cu  matmul_v4_rc_episode_context.h  matmul_v4_rc_episode_context_link.cpp  matmul_v4_rc_mx_ozaki_native.cu  matmul_v4_rc_mx_ozaki_native.h  matmul_v4_rc_mx_ozaki_native_link.cpp  matmul_v4_rc_mx_ozaki_native_sm100.cu  matmul_v4_rc_mx_ozaki_native_sm120a.cu  oracle_accel.cu  oracle_accel.h  (+1 more)
src/hip/: btx_hip_mfma_guard.h  btx_hip_mfma_i8_gemm.h  matmul_v4_accel.h  matmul_v4_accel.hip  matmul_v4_accel_stub.cpp  matmul_v4_bmx4_accel.h  matmul_v4_bmx4_accel.hip  matmul_v4_bmx4_accel_stub.cpp  matmul_v4_lt_accel.h  matmul_v4_lt_accel.hip  matmul_v4_lt_accel_stub.cpp  matmul_v4_lt_mx_native.h  matmul_v4_lt_mx_native.hip  matmul_v4_lt_tensor_gemm.hip  matmul_v4_rc_mx_ozaki_native.h  matmul_v4_rc_mx_ozaki_native.hip  matmul_v4_rc_mx_ozaki_native_stub.cpp
src/index/: base.cpp  blockfilterindex.cpp
src/interfaces/: chain.h  mining.h
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  coinstats.cpp  mempool_entry.h  mempool_options.h  warning.h
src/libbitcoinpqc/: CMakeLists.txt
src/matmul/: accel_v4.cpp  accel_v4.h  accel_v4_stub.cpp  accelerated_solver.cpp  accelerated_solver.h  backend_capabilities.cpp  backend_capabilities.h  backend_capabilities_v4.cpp  backend_capabilities_v4.h  exact_gemm_radix.h  exact_gemm_resolve.h  field.cpp  field.h  freivalds.cpp  freivalds.h  int8_field.cpp  int8_field.h  matmul_pow.cpp  matmul_pow.h  matmul_proof_store.cpp  matmul_proof_store.h  matmul_sketch_cache.cpp  matmul_sketch_cache.h  matmul_v4.cpp  matmul_v4.h  matmul_v4_batch.cpp  matmul_v4_batch.h  matmul_v4_bmx4.cpp  matmul_v4_bmx4.h  matmul_v4_bmx4_batch.cpp  matmul_v4_bmx4_batch.h  matmul_v4_bmx4_pipeline.cpp  matmul_v4_bmx4_pipeline.h  matmul_v4_exact_float.cpp  matmul_v4_exact_float.h  matmul_v4_fast_exact.cpp  matmul_v4_fast_exact.h  matmul_v4_lt.cpp  matmul_v4_lt.h  matmul_v4_lt_mx_exact.cpp  (+83 more)
src/metal/: matmul_accel.h  matmul_accel.mm  matmul_accel_env.cpp  matmul_accel_env.h  matmul_accel_kernels.metal  matmul_accel_stub.cpp  matmul_v4_accel.h  matmul_v4_accel.mm  matmul_v4_accel_kernels.metal  matmul_v4_accel_stub.cpp  matmul_v4_bmx4_accel.h  matmul_v4_bmx4_accel.mm  matmul_v4_bmx4_accel_kernels.metal  matmul_v4_bmx4_accel_stub.cpp  matmul_v4_lt_accel.h  matmul_v4_lt_accel.mm  matmul_v4_lt_accel_stub.cpp  matmul_v4_lt_tensor_gemm.mm  matmul_v4_rc_ozaki_accel.cpp  matmul_v4_rc_ozaki_accel.h  matmul_v4_rc_ozaki_accel.mm  (+7 more)
(+1659 files in other folders)
